REWIND-56: fixed swagger api endpoint
